--- a/proj_report_outline.tex
+++ b/proj_report_outline.tex
@@ -184,6 +184,8 @@ A short description of the project goes here.
 \include{exps/exps}
 \include{conclusion/conclusion}
 
+\appendix
+\include{appendix/appendix}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
